--- a/apps/client/app/globals.css
+++ b/apps/client/app/globals.css
@@ -48,7 +48,8 @@
   }
 
   .section {
-    @apply py-14 my-0 w-full;
+    @apply py-10 my-0 w-full;
+    @apply md:py-14 my-0 w-full;
   }
   .button {
     @apply cursor-pointer;
